--- a/system/commands/eval_all_vat.yml
+++ b/system/commands/eval_all_vat.yml
@@ -29,7 +29,7 @@ commands:
 
 
 #  # CIFAR10, random_forest
-  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/adv_robust_vat            --checkpoint_file ckpt_epoch_299.pth        --method random_forest --attack_dir ''                          --batch_size 100 --num_workers 5 --dump_dir random_forest_global, 11000]
+#  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/adv_robust_vat            --checkpoint_file ckpt_epoch_299.pth        --method random_forest --attack_dir ''                          --batch_size 100 --num_workers 5 --dump_dir random_forest_global, 11000]
 #  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/adv_robust_vat            --checkpoint_file ckpt_epoch_299.pth        --method random_forest --attack_dir fgsm_targeted               --batch_size 100 --num_workers 5 --dump_dir random_forest_global, 11000]
 #  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/adv_robust_vat            --checkpoint_file ckpt_epoch_299.pth        --method random_forest --attack_dir fgsm_targeted_eps_0.031     --batch_size 100 --num_workers 5 --dump_dir random_forest_global, 11000]
 #  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/adv_robust_vat            --checkpoint_file ckpt_epoch_299.pth        --method random_forest --attack_dir jsma_targeted               --batch_size 100 --num_workers 5 --dump_dir random_forest_global, 11000]
@@ -161,7 +161,7 @@ commands:
 
 
 #  # Tiny Imagenet, random_forest
- - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/adv_robust_vat     --checkpoint_file ckpt_epoch_299.pth        --method random_forest --attack_dir ''                           --batch_size 100 --num_workers 40 --dump_dir random_forest_global, 11000]
+# - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/adv_robust_vat     --checkpoint_file ckpt_epoch_299.pth        --method random_forest --attack_dir ''                           --batch_size 100 --num_workers 40 --dump_dir random_forest_global, 11000]
 #  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/adv_robust_vat     --checkpoint_file ckpt_epoch_299.pth        --method random_forest --attack_dir fgsm_targeted               --batch_size 100 --num_workers 40 --dump_dir random_forest_global, 11000]
 #  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/adv_robust_vat     --checkpoint_file ckpt_epoch_299.pth        --method random_forest --attack_dir fgsm_targeted_eps_0.031     --batch_size 100 --num_workers 40 --dump_dir random_forest_global, 11000]
 #  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/adv_robust_vat     --checkpoint_file ckpt_epoch_299.pth        --method random_forest --attack_dir jsma_targeted               --batch_size 100 --num_workers 40 --dump_dir random_forest_global, 11000]
