--- a/system/commands/train_random_forest.yml
+++ b/system/commands/train_random_forest.yml
@@ -19,6 +19,47 @@ commands:
   - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/adv_robust_vat      --checkpoint_file ckpt_epoch_299.pth   --num_workers 32, 11000]
 
 
+  # Resnet 50
+  # Regular
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_00        --checkpoint_file ckpt.pth            --num_workers 32, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_00       --checkpoint_file ckpt.pth            --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_00           --checkpoint_file ckpt.pth            --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet50/regular/resnet50_00  --checkpoint_file ckpt.pth            --num_workers 32, 11000]
+
+  # TRADES
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/adv_robust_trades          --checkpoint_file ckpt_epoch_100.pth  --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_trades         --checkpoint_file ckpt_epoch_100.pth  --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_trades             --checkpoint_file ckpt_epoch_100.pth  --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet50/adv_robust_trades    --checkpoint_file ckpt.pth            --num_workers 32, 11000]
+
+  # VAT
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/adv_robust_vat            --checkpoint_file ckpt_epoch_299.pth   --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat           --checkpoint_file ckpt_epoch_299.pth   --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat               --checkpoint_file ckpt_epoch_199.pth   --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet50/adv_robust_vat      --checkpoint_file ckpt_epoch_299.pth   --num_workers 32, 11000]
+
+
+
+  # Resnet 101
+  # Regular
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet101/regular/resnet101_00        --checkpoint_file ckpt.pth            --num_workers 32, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet101/regular/resnet101_00       --checkpoint_file ckpt.pth            --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/regular/resnet101_00           --checkpoint_file ckpt.pth            --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet101/regular/resnet101_00  --checkpoint_file ckpt.pth            --num_workers 32, 11000]
+
+  # TRADES
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet101/adv_robust_trades          --checkpoint_file ckpt_epoch_100.pth  --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet101/adv_robust_trades         --checkpoint_file ckpt_epoch_100.pth  --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/adv_robust_trades             --checkpoint_file ckpt_epoch_100.pth  --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet101/adv_robust_trades    --checkpoint_file ckpt.pth            --num_workers 32, 11000]
+
+  # VAT
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet101/adv_robust_vat            --checkpoint_file ckpt_epoch_299.pth   --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet101/adv_robust_vat           --checkpoint_file ckpt_epoch_299.pth   --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/adv_robust_vat               --checkpoint_file ckpt_epoch_199.pth   --num_workers 40, 11000]
+  # NOT READY YET
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet101/adv_robust_vat      --checkpoint_file ckpt_epoch_299.pth   --num_workers 32, 11000]
+
 
 
 
@@ -59,7 +100,7 @@ commands:
   - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/regular/resnet34_00        --checkpoint_file ckpt.pth            --num_workers 32    --train_exc square         --dump_dir random_forest_exc_square       , 11000]
   - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/regular/resnet34_00        --checkpoint_file ckpt.pth            --num_workers 32    --train_exc boundary       --dump_dir random_forest_exc_boundary     , 11000]
   - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/regular/resnet34_00        --checkpoint_file ckpt.pth            --num_workers 32    --train_exc all            --dump_dir random_forest_exc_all_attacks  , 11000]
-  
+
   # TRADES
   - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/adv_robust_trades        --checkpoint_file ckpt_epoch_100.pth            --num_workers 32    --train_exc fgsm           --dump_dir random_forest_exc_fgsm         , 11000]
   - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/adv_robust_trades        --checkpoint_file ckpt_epoch_100.pth            --num_workers 32    --train_exc jsma           --dump_dir random_forest_exc_jsma         , 11000]
