--- a/system/commands/commands_Y.yml
+++ b/system/commands/commands_Y.yml
@@ -1,60 +1,42 @@
 commands:
   # Resnet 50
   # Regular
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_00        --checkpoint_file ckpt.pth            --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_00       --checkpoint_file ckpt.pth            --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_00           --checkpoint_file ckpt.pth            --train_exc boundary --num_workers 40, 11000]
-
-  # TRADES
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/adv_robust_trades          --checkpoint_file ckpt_epoch_100.pth  --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_trades         --checkpoint_file ckpt_epoch_100.pth  --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_trades             --checkpoint_file ckpt_epoch_100.pth  --train_exc boundary --num_workers 40, 11000]
-
-  # VAT
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/adv_robust_vat            --checkpoint_file ckpt_epoch_299.pth   --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat           --checkpoint_file ckpt_epoch_299.pth   --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat               --checkpoint_file ckpt_epoch_199.pth   --train_exc boundary --num_workers 40, 11000]
-
-
-
-  # Resnet 101
-  # Regular
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet101/regular/resnet101_00        --checkpoint_file ckpt.pth            --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet101/regular/resnet101_00       --checkpoint_file ckpt.pth            --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/regular/resnet101_00           --checkpoint_file ckpt.pth            --train_exc boundary --num_workers 40, 11000]
-
-  # TRADES
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet101/adv_robust_trades          --checkpoint_file ckpt_epoch_100.pth  --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet101/adv_robust_trades         --checkpoint_file ckpt_epoch_100.pth  --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/adv_robust_trades             --checkpoint_file ckpt_epoch_100.pth  --train_exc boundary --num_workers 40, 11000]
-
-  # VAT
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet101/adv_robust_vat            --checkpoint_file ckpt_epoch_299.pth   --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet101/adv_robust_vat           --checkpoint_file ckpt_epoch_299.pth   --train_exc boundary --num_workers 40, 11000]
-  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/adv_robust_vat               --checkpoint_file ckpt_epoch_199.pth   --train_exc boundary --num_workers 40, 11000]
-
-
-
-# RUN BEFORE:
-#  # Resnet 50
-#  # Regular
-#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet50/regular/resnet50_00  --checkpoint_file ckpt.pth           --train_exc boundary --num_workers 34, 11000]
+#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_00        --checkpoint_file ckpt.pth            --train_exc boundary --num_workers 40, 11000]
+#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_00       --checkpoint_file ckpt.pth            --train_exc boundary --num_workers 40, 11000]
+#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_00           --checkpoint_file ckpt.pth            --train_exc boundary --num_workers 40, 11000]
 #
 #  # TRADES
-#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet50/adv_robust_trades    --checkpoint_file ckpt.pth           --train_exc boundary --num_workers 34, 11000]
-#
-#  # VAT
-#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet50/adv_robust_vat      --checkpoint_file ckpt_epoch_299.pth  --train_exc boundary --num_workers 34, 11000]
-#
-#
-#
-#  # Resnet 101
-#  # Regular
-#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet101/regular/resnet101_00  --checkpoint_file ckpt.pth          --train_exc boundary  --num_workers 34, 11000]
-#
-#  # TRADES
-#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet101/adv_robust_trades    --checkpoint_file ckpt.pth           --train_exc boundary  --num_workers 34, 11000]
-#
-#  # VAT
-#  # NOT READY YET
-#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet101/adv_robust_vat      --checkpoint_file ckpt_epoch_299.pth  --train_exc boundary  --num_workers 34, 11000]
+#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/adv_robust_trades          --checkpoint_file ckpt_epoch_100.pth  --train_exc boundary --num_workers 40, 11000]
+#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_trades         --checkpoint_file ckpt_epoch_100.pth  --train_exc boundary --num_workers 40, 11000]
+#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_trades             --checkpoint_file ckpt_epoch_100.pth  --train_exc boundary --num_workers 40, 11000]
+
+  # VAT
+#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/adv_robust_vat            --checkpoint_file ckpt_epoch_299.pth   --train_exc boundary --num_workers 40, 11000]
+
+
+
+#  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat           --checkpoint_file ckpt_epoch_299.pth   --train_exc boundary --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_299.pth           --num_workers 5    --train_incl ""  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_299.pth           --num_workers 5    --train_incl fgsm_targeted  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_299.pth           --num_workers 5    --train_incl fgsm_targeted_eps_0.031  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_299.pth           --num_workers 5    --train_incl jsma_targeted  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_299.pth           --num_workers 5    --train_incl pgd_targeted  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_299.pth           --num_workers 5    --train_incl pgd_targeted_eps_0.031  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_299.pth           --num_workers 5    --train_incl deepfool  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_299.pth           --num_workers 5    --train_incl cw_targeted  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_299.pth           --num_workers 5    --train_incl cw_targeted_Linf_eps_0.031  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_299.pth           --num_workers 5    --train_incl square  , 11000]
+
+
+
+  # - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat               --checkpoint_file ckpt_epoch_199.pth   --train_exc boundary --num_workers 40, 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_199.pth           --num_workers 5    --train_incl ""  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_199.pth           --num_workers 5    --train_incl fgsm_targeted  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_199.pth           --num_workers 5    --train_incl fgsm_targeted_eps_0.031  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_199.pth           --num_workers 5    --train_incl jsma_targeted  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_199.pth           --num_workers 5    --train_incl pgd_targeted  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_199.pth           --num_workers 5    --train_incl pgd_targeted_eps_0.031  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_199.pth           --num_workers 5    --train_incl deepfool  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_199.pth           --num_workers 5    --train_incl cw_targeted  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_199.pth           --num_workers 5    --train_incl cw_targeted_Linf_eps_0.031  , 11000]
+  - [python active_learning_project/scripts/train_random_forest.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust_vat       --checkpoint_file ckpt_epoch_199.pth           --num_workers 5    --train_incl square  , 11000]
